fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@
   --accent: #e93886;
   --accent-border: rgba(233, 56, 134, .3);
 }
+html {
+  overflow: hidden;
+}
 
 body {
   background-color: var(--background);
@@ -18,6 +21,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: var(--text);
   position: relative;
+  overflow: hidden;
   width: 100dvw;
   height: 100dvh;
 }
@@ -87,7 +91,6 @@ body {
 
 .App{
   text-align: center;
-  overflow: hidden;
 }
 
 body .shadow {
